# CG-MineRush

./: CMakeLists.txt  README.md  imgui.ini
Models/: Syrian.mtl  gold.mtl  pilha.mtl  rockModel.mtl
SOIL2/: CMakeLists.txt  SOIL2.c
models/: flashlight.mtl  maze.mtl
res/shaders/: Basic.shader  lighting.frag
src/: Application.cpp  CMakeLists.txt  Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Lantern.cpp  Lantern.h  Main.cpp  Mesh.cpp  Mesh.h  Model.cpp  Model.h  MovingBody.cpp  MovingBody.h  PickUps.cpp  PickUps.h  PlayerChar.cpp  PlayerChar.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VAO.h  VBO.cpp  VBO.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h  main.cpp
src/Shaders/: default.frag  default.vert
src/tests/: Test.cpp  Test.h  TestClearColor.cpp  TestClearColor.h
